Shenandoah: Race results degenerated GC to enter wrong entry point

XMLWordPrintable

    • gc
    • b22

        SAP reported:

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/openjdk/nb/darwinaarch64/jdk-dev/src/hotspot/share/gc/shared/satbMarkQueue.cpp:169), pid=11373, tid=17923
        # fatal error: Thread SATB queue has an unexpected active state
        #
        # JRE version: OpenJDK Runtime Environment (18.0.0.1) (fastdebug build 18.0.0.1-internal+0-adhoc.openjdk.jdk-dev)
        # Java VM: OpenJDK 64-Bit Server VM (fastdebug 18.0.0.1-internal+0-adhoc.openjdk.jdk-dev, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, shenandoah gc, bsd-aarch64)
        # Core dump will be written. Default location: /cores/core.11373
        #
        # If you would like to submit a bug report, please visit:
        # https://bugreport.java.com/bugreport/crash.jsp
        #

              Assignee:
              Zhengyu Gu
              Reporter:
              Zhengyu Gu
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: