8276201: Shenandoah: Race results degenerated GC to enter wrong entry point

Reviewed-by: shade
Backport-of: dbf5100dd705fbe4a3aeae49405ca541d581f106